prevent long lines from breaking out of box

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -319,7 +319,9 @@ hr
 
 .contentWrapper
   float: left
+  overflow-wrap: break-word // allow long words to be broken
   width: 100%
+  word-wrap: break-word // allow long words to be broken
 
   @media PHONE
     float: none
